Closed
Bug 1116982
Opened 11 years ago
Closed 11 years ago
TEST-UNEXPECTED-FAIL | mailnews/compose/test/unit/test_messageHeaders.js | xpcshell return code: -11
Categories
(MailNews Core :: MIME, defect)
MailNews Core
MIME
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 37.0
People
(Reporter: rkent, Assigned: rkent)
References
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
995 bytes,
patch
|
neil
:
review+
|
Details | Diff | Splinter Review |
TEST-UNEXPECTED-FAIL | mailnews/compose/test/unit/test_messageHeaders.js | xpcshell return code: -11
08:25:59 INFO - TEST-PASS | mailnews/compose/test/unit/test_messageHeaders.js | testContentHeaders - [testContentHeaders : 77] true == true
08:25:59 INFO - (xpcshell/head.js) | test run_next_test 8 pending (2)
08:25:59 INFO - (xpcshell/head.js) | test testContentHeaders finished (2)
08:25:59 INFO - mailnews/compose/test/unit/test_messageHeaders.js | Starting testSentMessage
08:25:59 INFO - (xpcshell/head.js) | test testSentMessage pending (2)
08:25:59 INFO - PROCESS | 19420 | [19420] WARNING: NS_ENSURE_TRUE(parent) failed: file /builds/slave/tb-c-cen-lx-d-0000000000000000/build/mailnews/base/src/nsMsgProgress.cpp, line 52
08:25:59 INFO - PROCESS | 19420 | [19420] WARNING: NS_ENSURE_TRUE(m_callbacks) failed: file /builds/slave/tb-c-cen-lx-d-0000000000000000/build/mailnews/compose/src/nsSmtpUrl.cpp, line 731
08:25:59 INFO - (xpcshell/head.js) | test run_next_test 8 finished (2)
08:25:59 INFO - PROCESS | 19420 | GetDiskSpaceAvailable returned: 10823655424 bytes
08:25:59 INFO - PROCESS | 19420 | \x07[19420] ###!!! ASSERTION: QueryInterface needed: 'query_result.get() == mRawPtr', file ../../../../dist/include/nsCOMPtr.h, line 402
Similar errors are occurring in other mime-related tests.
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Assignee | ||
Comment 5•11 years ago
|
||
query interface missing for nsIMsgOperationListener in the new send filter changes to the send function, I'll do a patch to fix.
Assignee: nobody → kent
Blocks: 11039
Updated•11 years ago
|
Keywords: regression
Hardware: x86_64 → All
Comment 6•11 years ago
|
||
D'oh. If only debug builds weren't so abysmally slow I'd still be using them...
Assignee | ||
Comment 7•11 years ago
|
||
Attachment #8543180 -
Flags: review?(neil)
Updated•11 years ago
|
Attachment #8543180 -
Flags: review?(neil) → review+
Assignee | ||
Comment 8•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 37.0
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•