Bug 1116982 - QueryInterface missing for nsIMsgOperatorListener in nsMsgFilterAfterTheFact, r=neil, a=bustage fix